Update title, toc, metadata

--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -5,7 +5,7 @@
    "id": "539f98fa-9ccc-472a-99da-ebe6382243dc",
    "metadata": {},
    "source": [
-    "# Save and retrieve jobs"
+    "# Tag, retrieve, and save results"
    ]
   },
   {
@@ -212,7 +212,7 @@
   }
  ],
  "metadata": {
-  "description": "Store Qiskit objects on disk or in the cloud so you can continue where you left off",
+  "description": "Use job_id and tags to organize job results, and save results to disk.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -230,7 +230,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Save and retrieve Qiskit objects"
+  "title": "Tag, retrieve, and save results"
  },
  "nbformat": 4,
  "nbformat_minor": 2
