--- a/docs/guides/post-process-results.mdx
+++ b/docs/guides/post-process-results.mdx
@@ -15,7 +15,7 @@ properties of the problem, such as total spin, parity, or particle conservation 
 unphysical observables.
 
 ## Guides for post-processing results
-* [Retrieve and save results](./save-jobs)
-* [Visualize results](./visualize-results)
-* [Sample-based quantum diagonalization (SQD) overview](./qiskit-addons-sqd)
-  * [Getting started with SQD](./qiskit-addons-sqd-get-started)
+* [Tag, retrieve, and save results](/docs/guides/save-jobs)
+* [Visualize results](/docs/guides/visualize-results)
+* [Sample-based quantum diagonalization (SQD) overview](/docs/guides/qiskit-addons-sqd)
+  * [Getting started with SQD](/docs/guides/qiskit-addons-sqd-get-started)
