--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -7,7 +7,7 @@ description: Setup instructions for IBM Quantum on IBM Cloud to submit Qiskit SD
 
 # Set up your IBM Cloud account
 
-If you have an invitation to join an account, follow the steps in [Set up your IBM Cloud account - invited users](/docs/guides/cloud-setup-invited) instead.
+If you have an administrator, they will set up instances and invite you to join an account. When this happens, you will be notified by email. If you have an emailed invitation to join an account, follow the steps in [Set up your IBM Cloud account - invited users](/docs/guides/cloud-setup-invited) instead of using this guide.
 
 You can run workloads on IBM&reg; quantum processing units (QPUs) by setting up an account on IBM Cloud&reg;. You will also need to [install and set up Qiskit and Qiskit Runtime](/docs/guides/install-qiskit#local).
 
@@ -28,7 +28,7 @@ Your user account is associated with one or more [instances,](./instances) ident
    - You can have multiple IBM Cloud accounts.  You can access any of your IBM Cloud accounts at any time from the account switcher in the header of the [IBM Quantum Platform interface.](https://quantum.cloud.ibm.com)
    - If you are invited to join an IBM Cloud account, you will get an email invitation to join the account.  Follow the instructions in that email.
    </Admonition>
-1. Log in to [IBM Quantum Platform](https://quantum.cloud.ibm.com) with an IBMid or Google account.  If you don't have one, you are guided through creating one.
+1. Log in to [IBM Quantum Platform](https://quantum.cloud.ibm.com) with an IBMid or Google account.  **The profile that you use to log in to IBM Cloud or IBM Quantum Platform in this step is not your IBM Cloud account.**
 1. Make sure that the correct account and region are selected in the account switcher in the header, as shown in the following image.
 
     The region controls where your jobs are run and where the job data is kept. You can access either region by using the same API key, but you can only see and access the instances that were created in the region that you're logged in to.
