--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb
@@ -120,7 +120,7 @@
     "The `if_test` function applies an operation conditionally depending on a classical bit or register.\n",
     "\n",
     "The circuit first initializes $(\\mathsf{A},\\mathsf{B})$ to be in a $\\vert \\phi^+\\rangle$ state (which is not part of the protocol itself), followed by Alice's operations, then her measurements, and finally Bob's operations.\n",
-    "To test that the protocol works correctly, we'll apply a randomly generated single-qubit gate to the initialized $\\vert 0\\rangle$ state of $\\mathsf{Q}$ to obtain a random quantum state vector to be teleported. By applying the inverse (i.e., conjugate transpose) of that gate to $\\mathsf{B}$ after the protocol is run, we can verify that the state was teleported by measuring to see that it has returned to the $\\vert 0\\rangle$ state.\n",
+    "To test that the protocol works correctly, we'll apply a randomly generated single-qubit gate to the initialized $\\vert 0\\rangle$ state of $\\mathsf{Q}$ to obtain a random quantum state vector to be teleported. By applying the inverse (as in, the conjugate transpose) of that gate to $\\mathsf{B}$ after the protocol is run, we can verify that the state was teleported by measuring to see that it has returned to the $\\vert 0\\rangle$ state.\n",
     "\n",
     "First we'll randomly choose a unitary qubit gate."
    ]
