--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb
@@ -284,7 +284,7 @@
     "\n",
     "In greater detail, we have a sender (Alice) and a receiver (Bob) that share one e-bit of entanglement.\n",
     "According to the conventions in place for the lesson, this means that Alice holds a qubit $\\mathsf{A},$ Bob holds a qubit $\\mathsf{B},$ and together the pair $(\\mathsf{A},\\mathsf{B})$ is in the state $\\vert\\phi^+\\rangle.$\n",
-    "Alice wishes to transmit two classical bits to Bob, which we'll denoted by $c$ and $d,$ and she will accomplish this by sending him one qubit.\n",
+    "Alice wishes to transmit two classical bits to Bob, which we'll denote by $c$ and $d,$ and she will accomplish this by sending him one qubit.\n",
     "\n",
     "It is reasonable to view this feat as being less interesting than the one that teleportation accomplishes.\n",
     "Sending qubits is likely to be so much more difficult than sending classical bits for the foreseeable future that trading one qubit of quantum communication for two bits of classical communication, at the cost of an e-bit no less, hardly seems worth it.\n",
