--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb
@@ -248,7 +248,7 @@
    "id": "29560bcd",
    "metadata": {},
    "source": [
-    "We can also filter the statistics to focus just on the test result qubit if we wish, like this:"
+    "We can also filter the statistics to focus solely on the test result qubit if we wish, like this:"
    ]
   },
   {
