Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb
@@ -321,7 +321,7 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "The idea behind this protocol is pretty simple:\n",
+    "The idea behind this protocol is simple:\n",
     "Alice effectively chooses which Bell state she would like to be sharing with Bob,\n",
     "she sends Bob her qubit, and Bob measures to determine which Bell state Alice chose.\n",
     "\n",
@@ -388,7 +388,7 @@
    "id": "0b6b0573",
    "metadata": {},
    "source": [
-    "Now we'll build the circuit accordingly. Here we'll just allow Qiskit to use the default names for the qubits: $\\mathsf{q}_0$ for the top qubit and $\\mathsf{q}_1$ for the bottom one."
+    "Now we'll build the circuit accordingly. Here we'll allow Qiskit to use the default names for the qubits: $\\mathsf{q}_0$ for the top qubit and $\\mathsf{q}_1$ for the bottom one."
    ]
   },
   {
@@ -435,7 +435,7 @@
    "id": "8d3e094f",
    "metadata": {},
    "source": [
-    "Not much is new here, except the `measure_all` function, which measures all of the qubits and puts the results into a single classical register (therefore having two bits in this case).\n",
+    "Not much is new here, except the `measure_all` function, which measures all of the qubits and puts the results into a single classical register (and therefore having two bits in this case).\n",
     "\n",
     "Running the Aer simulator produces the expected output."
    ]
@@ -631,7 +631,7 @@
     "We'll take a look at the CHSH game momentarily, but before that let us briefly acknowledge that it's also interesting to consider other nonlocal games.\n",
     "In fact, it's extremely interesting; there are some pretty simple nonlocal games for which it's currently not known how well Alice and Bob can play using entanglement.\n",
     "The set-up is simple, but there's complexity at work — and for some games it can be impossibly difficult to compute best or near-best strategies for Alice and Bob.\n",
-    "This is the mind-blowing nature of the non-local games model.\n",
+    "This is the surprisingly unintuitive nature of the nonlocal games model.\n",
     "\n",
     "### CHSH game description\n",
     "\n",
@@ -669,8 +669,8 @@
     "So, for instance, we may write $a(0)$ to represent Alice's answer when her question is $0,$ and $a(1)$ to represent Alice's answer when her question is $1.$\n",
     "\n",
     "No deterministic strategy can possibly win the CHSH game every time.\n",
-    "One way to reason this is simply to go one-by-one through all of the possible deterministic strategies and check that every one of them loses for at least one of the four possible question pairs.\n",
-    "Alice and Bob can each choose from four possible functions from one bit to one bit — which we encountered in the lesson on [Single systems](https://learning.quantum.ibm.com/course/basics-of-quantum-information/single-systems) — and so there are $16$ different deterministic strategies in total to check.\n",
+    "One way to understand this is simply to go one-by-one through all of the possible deterministic strategies and check that every one of them loses for at least one of the four possible question pairs.\n",
+    "Alice and Bob can each choose from four possible functions from one bit to one bit — which we encountered in the lesson on [Single systems](/learning/courses/basics-of-quantum-information/single-systems/introduction) — and so there are $16$ different deterministic strategies in total to check.\n",
     "\n",
     "We can also reason this analytically.\n",
     "If Alice and Bob's strategy wins when $(x,y) = (0,0),$ then it must be that $a(0) = b(0);$\n",
@@ -682,7 +682,7 @@
     "b(1) = a(0) = b(0) = a(1).\n",
     "$$\n",
     "\n",
-    "This implies that the strategy loses in the final case $(x,y) = (1,1),$ for here winning requires that\n",
+    "This implies that the strategy loses in the final case $(x,y) = (1,1),$ and for here winning requires that\n",
     "$a(1) \\neq b(1).$\n",
     "Thus, there can be no deterministic strategy that wins every time.\n",
     "\n",
@@ -696,7 +696,7 @@
     "Could it help Alice and Bob to use randomness — including the possibility of *shared randomness*, where their random choices are correlated?\n",
     "\n",
     "It turns out that probabilistic strategies don't help at all to increase the probability that Alice and Bob win.\n",
-    "This is because every probabilistic strategy can alternatively be viewed as a random selection of a deterministic strategy, just like (as was mentioned in the [Single systems](https://learning.quantum.ibm.com/course/basics-of-quantum-information/single-systems) lesson) probabilistic operations can be viewed as random selections of deterministic operations.\n",
+    "This is because every probabilistic strategy can alternatively be viewed as a random selection of a deterministic strategy, just like (as was mentioned in the [Single systems](/learning/courses/basics-of-quantum-information/single-systems/introduction) lesson) probabilistic operations can be viewed as random selections of deterministic operations.\n",
     "The average is never larger than the maximum, and so it follows that probabilistic strategies don't offer any advantage in terms of their overall winning probability.\n",
     "\n",
     "Thus, winning with probability $3/4$ is the best that Alice and Bob can do using any classical strategy, whether deterministic or probabilistic.\n",
@@ -1093,7 +1093,7 @@
     "\n",
     "What Alice effectively does is to choose an angle $\\alpha,$ depending on her question $x,$ and then to apply $U_{\\alpha}$ to her qubit and measure.\n",
     "Similarly, Bob chooses an angle $\\beta,$ depending on $y,$ and then he applies $U_{\\beta}$ to his qubit and measures.\n",
-    "We've chosen $\\alpha$ and $\\beta$ like so.\n",
+    "We've chosen $\\alpha$ and $\\beta$ as follows.\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -1162,7 +1162,7 @@
     "\n",
     "These equations can be connected to the figures above by imagining that we superimpose the bases chosen by Alice and Bob.\n",
     "\n",
-    "#### Exploring the strategy\n",
+    "#### Explore the strategy\n",
     "\n",
     "When $(x,y) = (0,0),$ Alice and Bob choose $\\alpha = 0$ and $\\beta = \\pi/8,$ and by superimposing their bases we obtain this figure:\n",
     "\n",
@@ -1246,7 +1246,7 @@
     "The CHSH game is a particularly clean and simple example of a Bell test, and can be viewed as a proof, or demonstration, of Bell's theorem.\n",
     "\n",
     "The CHSH game offers a way to experimentally test the theory of quantum information.\n",
-    "Experiments can be performed that implement the CHSH game, and test the sorts of strategies based on entanglement described above.\n",
+    "We can perform experiments that implement the CHSH game, and test the sorts of strategies based on entanglement described above.\n",
     "This provides us with a high degree of confidence that entanglement is real — and unlike the sometimes vague or poetic ways that we come up with to explain entanglement, the CHSH game gives us a concrete and testable way to *observe* entanglement.\n",
     "The 2022 Nobel Prize in Physics acknowledges the importance of this line of work: the prize was awarded to Alain Aspect, John Clauser (the C in CHSH) and Anton Zeilinger, for observing entanglement through Bell tests on entangled photons."
    ]
