Make saving credentials a new topic

--- a/docs/guides/initialize-account - Copy.mdx
+++ b/docs/guides/initialize-account - Copy.mdx
@@ -71,7 +71,7 @@ Although the `instance` input parameter is optional, it is recommended that you 
 <span id="saved"></span>
 ### Quick start path: Specify saved credentials
 
-If you have already saved your credentials, use the following code to use your default credentials. For instructions to save credentials, see [Save your access credentials.](/docs/guides/save-credentials)
+If you have already saved your credentials, use the following code to use your default credentials. For instructions to save credentials, see [Save your access credentials.](/docs/guides/cloud-setup#cloud-save)
 
 ```python
 from qiskit_ibm_runtime import QiskitRuntimeService
@@ -134,10 +134,6 @@ If you provide a token but **don't provide an instance CRN** when instantiating 
 - **`plans_preference`**: The types of instance plans to prioritize. For example, if [`open`] is passed in, only Open Plan instances are available. Accepted values are `open` and `premium`. If `plans_preference` is not specified, free plans are prioritized over paid plans.
 - **`region`**: The instance region. Accepted values are `us-east` and `eu-de`.
 - **`tags`**: The instance tags. Accepts a list of tag name strings.
-
-<Admonition type="note">
-You can set up your saved credentials to automatically select an instance.
-</Admonition>
 
 #### Examples
 
