--- a/docs/api/qiskit-ibm-transpiler/release-notes.mdx
+++ b/docs/api/qiskit-ibm-transpiler/release-notes.mdx
@@ -10,49 +10,72 @@ in_page_toc_max_heading_level: 2
 
 <span id="id1" />
 
+## 0.14.1 (2025-09-15)
+
+### New features
+
+*   docs: Improve documentation structure and add comprehensive tutorial ([198](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/198))
+*   Enable local\_mode by default for AIPauliNetworkSynthesis and solving a error for non-synthesized circuits ([199](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/199))
+
+### Bug fixes
+
+*   Keep the original representation when the service/local version does not provide a better circuit ([195](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/195))
+
+### Other notes
+
+*   Remove dependency on qiskit runtime for local testing ([200](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/200))
+
+<span id="id2" />
+
 ## 0.14.0 (2025-08-21)
+
+<span id="id3" />
 
 ### New features
 
 *   Migrate Transpiler Service to Qiskit Function ([189](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/189))
 
-<span id="id2" />
+<span id="id4" />
 
 ## 0.13.1 (2025-07-21)
+
+<span id="id5" />
 
 ### Other notes
 
 *   Updating the README to reflect the latest changes & updates ([184](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/191))
 
-<span id="id3" />
+<span id="id6" />
 
 ## 0.13.0 (2025-07-03)
 
-<span id="id4" />
+<span id="id7" />
 
 ### New features
 
 *   Enable Pauli Network inference in local mode ([184](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/184))
 
-<span id="id5" />
+<span id="id8" />
 
 ## 0.12.0 (2025-06-20)
 
-<span id="id6" />
+<span id="id9" />
 
 ### New features
 
 *   Improve Collection Pass Performance via Precomputed Siblings and Queue Optimization #UnitaryHack2025 ([177](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/177))
 
-<span id="id7" />
+<span id="id10" />
 
 ## 0.11.1 (2025-05-14)
+
+<span id="id11" />
 
 ### Bug fixes
 
 *   Add Networkx package missing from the requirements ([172](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/172))
 
-<span id="id8" />
+<span id="id12" />
 
 ## 0.11.0 (2025-03-25)
 
@@ -64,7 +87,7 @@ in_page_toc_max_heading_level: 2
 
 *   Remove backend\_name from AIRouting and AISynthesis ([165](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/165))
 
-<span id="id9" />
+<span id="id13" />
 
 ### Other notes
 
@@ -82,17 +105,17 @@ in_page_toc_max_heading_level: 2
 
     Fixes #166 \<[https://github.com/Qiskit/qiskit-ibm-transpiler/issues/166](https://github.com/Qiskit/qiskit-ibm-transpiler/issues/166)>. ([166](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/166))
 
-<span id="id10" />
+<span id="id14" />
 
 ## 0.10.3 (2025-03-04)
 
-<span id="id11" />
+<span id="id15" />
 
 ### Upgrade notes
 
 *   Support qiskit 1.4.0 (fixed) ([162](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/162))
 
-<span id="id12" />
+<span id="id16" />
 
 ### New features
 
@@ -111,21 +134,21 @@ in_page_toc_max_heading_level: 2
 
     Fixes #18 \<[https://github.com/Qiskit/qiskit-ibm-transpiler/issues/18](https://github.com/Qiskit/qiskit-ibm-transpiler/issues/18)>. ([158](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/158))
 
-<span id="id13" />
+<span id="id17" />
 
 ## 0.10.2 (2025-02-26)
 
-<span id="id14" />
+<span id="id18" />
 
 ### Upgrade notes
 
 *   Support qiskit 1.4.0 ([159](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/159))
 
-<span id="id15" />
+<span id="id19" />
 
 ## 0.10.1 (2025-02-20)
 
-<span id="id16" />
+<span id="id20" />
 
 ### Bug fixes
 
@@ -133,64 +156,64 @@ in_page_toc_max_heading_level: 2
 *   Add Qiskit 1.3.3 to QPY version mapping ([155](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/155))
 *   Use staging service for tests ([156](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/156))
 
-<span id="id17" />
+<span id="id21" />
 
 ## 0.10.0 (2025-01-09)
 
-<span id="id18" />
+<span id="id22" />
 
 ### Upgrade notes
 
 *   Update Qiskit to v1.3.0. ([144](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/144))
 
-<span id="id19" />
+<span id="id23" />
 
 ### Deprecation notes
 
 *   Remove qiskit\_transpiler\_service package. ([147](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/147))
 
-<span id="id20" />
+<span id="id24" />
 
 ### Bug fixes
 
 *   Align QPY version with service. ([136](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/136))
 *   Fixes permutation notebook example by updating the coupling map used ([141](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/141))
 
-<span id="id21" />
+<span id="id25" />
 
 ## 0.9.3 (2024-12-18)
 
-<span id="id22" />
+<span id="id26" />
 
 ### Other notes
 
 *   Pin qiskit\_ibm\_ai\_local\_transpiler version to 0.1.4 and Qiskit to \<1.3 ([149](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/149))
 
-<span id="id23" />
+<span id="id27" />
 
 ## 0.9.2 (2024-12-12)
 
-<span id="id24" />
+<span id="id28" />
 
 ### Bug fixes
 
 *   Pin qiskit\_ibm\_ai\_local\_transpiler version to 0.1.3 ([145](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/145))
 
-<span id="id25" />
+<span id="id29" />
 
 ## 0.9.1 (2024-11-15)
 
-<span id="id26" />
+<span id="id30" />
 
 ### Bug fixes
 
 *   Fix optimization\_preferences\` used in generate\_ai\_pass\_manager method. Adding related tests ([130](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/130))
 
-<span id="id27" />
+<span id="id31" />
 
 ## 0.9.0 (2024-11-14)
 
-<span id="id28" />
+<span id="id32" />
 
 ### New features
 
@@ -200,32 +223,32 @@ in_page_toc_max_heading_level: 2
 
 *   Deprecate Python 3.8 support
 
-<span id="id29" />
+<span id="id33" />
 
 ## 0.8.2 (2024-11-13)
 
-<span id="id30" />
+<span id="id34" />
 
 ### Bug fixes
 
 *   Added fix to avoid random test errors. Check that result exists when result is success. ([105](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/105))
 *   Fix pauli better circuit replacement. ([122](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/122))
 
-<span id="id31" />
+<span id="id35" />
 
 ## 0.8.1 (2024-11-13)
 
-<span id="id32" />
+<span id="id36" />
 
 ### New features
 
 *   Updating the README to reflect the availability of the AIPauliNetworkSynthesis feature. ([121](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/121))
 
-<span id="id33" />
+<span id="id37" />
 
 ## 0.8.0 (2024-11-13)
 
-<span id="id34" />
+<span id="id38" />
 
 ### New features
 
@@ -234,119 +257,119 @@ in_page_toc_max_heading_level: 2
 *   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
 *   Add Pauli Network synthesis pass. ([112](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/112))
 
-<span id="id35" />
+<span id="id39" />
 
 ## 0.7.4 (2024-11-11)
 
-<span id="id36" />
+<span id="id40" />
 
 ### New features
 
 *   Use QPY as exchange format with service ([104](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/104))
 
-<span id="id37" />
-
-## 0.7.3 (2024-11-06)
-
-<span id="id38" />
-
-### New features
-
-*   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
-
-<span id="id39" />
-
-## 0.7.2 (2024-10-31)
-
-<span id="id40" />
-
-### Bug fixes
-
-*   Added fix to avoid random test errors. Check that result exists when result is success. ([105](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/105))
-
 <span id="id41" />
 
-## 0.7.1 (2024-10-30)
+## 0.7.3 (2024-11-06)
 
 <span id="id42" />
 
 ### New features
 
-*   In case of failure, always retry the GET request to retrieve a result unitl the timeout is reached. Increase the delay between requests to 5 seconds when we are over 1 minute. Retry transpilation POST request three times in case of failure. ([97](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/97))
+*   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
 
 <span id="id43" />
 
-## 0.7.0 (2024-09-18)
+## 0.7.2 (2024-10-31)
 
 <span id="id44" />
+
+### Bug fixes
+
+*   Added fix to avoid random test errors. Check that result exists when result is success. ([105](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/105))
+
+<span id="id45" />
+
+## 0.7.1 (2024-10-30)
+
+<span id="id46" />
+
+### New features
+
+*   In case of failure, always retry the GET request to retrieve a result unitl the timeout is reached. Increase the delay between requests to 5 seconds when we are over 1 minute. Retry transpilation POST request three times in case of failure. ([97](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/97))
+
+<span id="id47" />
+
+## 0.7.0 (2024-09-18)
+
+<span id="id48" />
 
 ### New features
 
 *   Adds support for sending the use\_fractional\_gates option to the transpile service ([83](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/83))
 *   Adds iterative decomposition to Qasm3 export. ([85](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/85))
 
-<span id="id45" />
+<span id="id49" />
 
 ### Other notes
 
 *   Removes unneeded benchmark method ([81](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/81))
 *   Adds test to verify that a circuit with a barrier will be transpiled ([84](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/84))
 
-<span id="id46" />
+<span id="id50" />
 
 ## 0.6.5 (2024-11-11)
 
-<span id="id47" />
+<span id="id51" />
 
 ### New features
 
 *   Use QPY as exchange format with service ([104](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/104))
 
-<span id="id48" />
-
-## 0.6.4 (2024-11-07)
-
-<span id="id49" />
-
-### New features
-
-*   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
-
-<span id="id50" />
-
-## 0.6.3 (2024-10-31)
-
-<span id="id51" />
-
-### Bug fixes
-
-*   Added fix to avoid random test errors. Check that result exists when result is success. ([105](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/105))
-
 <span id="id52" />
 
-## 0.6.2 (2024-10-30)
+## 0.6.4 (2024-11-07)
 
 <span id="id53" />
 
 ### New features
 
-*   In case of failure, always retry the GET request to retrieve a result unitl the timeout is reached. Increase the delay between requests to 5 seconds when we are over 1 minute. Retry transpilation POST request three times in case of failure. ([97](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/97))
+*   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
 
 <span id="id54" />
 
-## 0.6.1 (2024-09-17)
+## 0.6.3 (2024-10-31)
 
 <span id="id55" />
 
 ### Bug fixes
 
-*   Fixes a bug with ECR gates coming from Qiskit when parsing using OpenQASM2 ([74](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/74))
+*   Added fix to avoid random test errors. Check that result exists when result is success. ([105](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/105))
 
 <span id="id56" />
 
-## 0.6.0 (2024-09-16)
+## 0.6.2 (2024-10-30)
 
 <span id="id57" />
+
+### New features
+
+*   In case of failure, always retry the GET request to retrieve a result unitl the timeout is reached. Increase the delay between requests to 5 seconds when we are over 1 minute. Retry transpilation POST request three times in case of failure. ([97](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/97))
+
+<span id="id58" />
+
+## 0.6.1 (2024-09-17)
+
+<span id="id59" />
+
+### Bug fixes
+
+*   Fixes a bug with ECR gates coming from Qiskit when parsing using OpenQASM2 ([74](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/74))
+
+<span id="id60" />
+
+## 0.6.0 (2024-09-16)
+
+<span id="id61" />
 
 ### New features
 
@@ -356,316 +379,316 @@ in_page_toc_max_heading_level: 2
 
 *   Enabling coupling\_map as options to the AI Synthesis passes ([70](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/70))
 
-<span id="id58" />
+<span id="id62" />
 
 ### Bug fixes
 
 *   Keep trying to get results even in case of HTTPError exception with status 520 ([52](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/52))
 *   Fixing the type of ECR gates when loading circuits from the Qiskit Transpiler Service ([63](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/63))
 
-<span id="id59" />
+<span id="id63" />
 
 ## 0.5.7 (2024-11-11)
 
-<span id="id60" />
+<span id="id64" />
 
 ### New features
 
 *   Use QPY as exchange format with service ([104](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/104))
 
-<span id="id61" />
-
-## 0.5.6 (2024-11-07)
-
-<span id="id62" />
-
-### New features
-
-*   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
-
-<span id="id63" />
-
-## 0.5.5 (2024-10-31)
-
-<span id="id64" />
-
-### Bug fixes
-
-*   Added fix to avoid random test errors. Check that result exists when result is success. ([105](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/105))
-
 <span id="id65" />
 
-## 0.5.4 (2024-10-30)
+## 0.5.6 (2024-11-07)
 
 <span id="id66" />
 
 ### New features
 
-*   In case of failure, always retry the GET request to retrieve a result unitl the timeout is reached. Increase the delay between requests to 5 seconds when we are over 1 minute. Retry transpilation POST request three times in case of failure. ([97](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/97))
+*   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
 
 <span id="id67" />
 
-## 0.5.3 (2024-09-17)
+## 0.5.5 (2024-10-31)
 
 <span id="id68" />
 
 ### Bug fixes
 
-*   Fixes a bug with ECR gates coming from Qiskit when parsing using OpenQASM2 ([74](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/74))
+*   Added fix to avoid random test errors. Check that result exists when result is success. ([105](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/105))
 
 <span id="id69" />
 
-## 0.5.2 (2024-09-12)
+## 0.5.4 (2024-10-30)
 
 <span id="id70" />
 
-### Bug fixes
+### New features
 
-*   Fixing the type of ECR gates when loading circuits from the qiskit transpiler service ([63](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/63))
+*   In case of failure, always retry the GET request to retrieve a result unitl the timeout is reached. Increase the delay between requests to 5 seconds when we are over 1 minute. Retry transpilation POST request three times in case of failure. ([97](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/97))
 
 <span id="id71" />
 
-## 0.5.1 (2024-08-29)
+## 0.5.3 (2024-09-17)
 
 <span id="id72" />
 
 ### Bug fixes
 
-*   Keep trying getting result even in case of HTTPError exception with status 520 ([52](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/52))
+*   Fixes a bug with ECR gates coming from Qiskit when parsing using OpenQASM2 ([74](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/74))
 
 <span id="id73" />
 
-## 0.5.0 (2024-08-27)
+## 0.5.2 (2024-09-12)
 
 <span id="id74" />
 
-### Upgrade notes
+### Bug fixes
 
-*   Rename package to `qiskit-ibm-transpiler` ([43](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/43))
+*   Fixing the type of ECR gates when loading circuits from the qiskit transpiler service ([63](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/63))
 
 <span id="id75" />
 
-## 0.4.10 (2024-09-17)
+## 0.5.1 (2024-08-29)
 
 <span id="id76" />
 
 ### Bug fixes
 
-*   Fixes a bug with ECR gates coming from Qiskit when parsing using OpenQASM2 ([77](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/77))
+*   Keep trying getting result even in case of HTTPError exception with status 520 ([52](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/52))
 
 <span id="id77" />
 
-## 0.4.9 (2024-09-12)
+## 0.5.0 (2024-08-27)
 
 <span id="id78" />
 
-### Bug fixes
+### Upgrade notes
 
-*   Fixing the type of ECR gates when loading circuits from the qiskit transpiler service ([64](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/64))
+*   Rename package to `qiskit-ibm-transpiler` ([43](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/43))
 
 <span id="id79" />
 
-## 0.4.8 (2024-08-29)
+## 0.4.10 (2024-09-17)
 
 <span id="id80" />
 
 ### Bug fixes
 
-*   Keep trying getting result even in case of HTTPError exception with status 520 ([54](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/54))
+*   Fixes a bug with ECR gates coming from Qiskit when parsing using OpenQASM2 ([77](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/77))
 
 <span id="id81" />
 
-## 0.4.7 (2024-08-27)
+## 0.4.9 (2024-09-12)
 
 <span id="id82" />
 
 ### Bug fixes
 
-*   Add stacklevel to DeprecationWarning so it appears in Jupyter notebooks ([49](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/49))
+*   Fixing the type of ECR gates when loading circuits from the qiskit transpiler service ([64](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/64))
 
 <span id="id83" />
 
-## 0.4.6 (2024-08-23)
+## 0.4.8 (2024-08-29)
 
 <span id="id84" />
+
+### Bug fixes
+
+*   Keep trying getting result even in case of HTTPError exception with status 520 ([54](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/54))
+
+<span id="id85" />
+
+## 0.4.7 (2024-08-27)
+
+<span id="id86" />
+
+### Bug fixes
+
+*   Add stacklevel to DeprecationWarning so it appears in Jupyter notebooks ([49](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/49))
+
+<span id="id87" />
+
+## 0.4.6 (2024-08-23)
+
+<span id="id88" />
 
 ### Deprecation notes
 
 *   Add deprecation notice in preparation for project rename to `qiskit-ibm-transpiler` ([40](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/40))
 
-<span id="id85" />
+<span id="id89" />
 
 ### Bug fixes
 
 *   Forward incoming error when decoding fails ([36](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/36))
 
-<span id="id86" />
+<span id="id90" />
 
 ## 0.4.5 (2024-08-01)
 
-<span id="id87" />
+<span id="id91" />
 
 ### New features
 
 *   Enable programmatic config of polling timeout ([28](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/28))
 
-<span id="id88" />
+<span id="id92" />
 
 ### Bug fixes
 
 *   Using the declared `ai_layout_mode` in the TranspilerService’s run method ([25](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/25))
 
-<span id="id89" />
+<span id="id93" />
 
 ## 0.4.4 (2024-07-25)
 
-<span id="id90" />
+<span id="id94" />
 
 ### Upgrade notes
 
 *   Increasing timeout to 600s instead of 120s ([21](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/21))
 
-<span id="id91" />
+<span id="id95" />
 
 ### New features
 
 *   Expose service errors to users ([8](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/8))
 *   Configure logging for a library ([10](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/10))
 
-<span id="id92" />
+<span id="id96" />
 
 ### Bug fixes
 
 *   Correctly parse string boolean for ai param ([7](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/7))
 
-<span id="id93" />
+<span id="id97" />
 
 ## 0.4.3 (2024-06-07)
 
-<span id="id94" />
+<span id="id98" />
 
 ### Upgrade notes
 
 *   Check existence of credentials and raise related exceptions instead of breaking
 
-<span id="id95" />
+<span id="id99" />
 
 ## 0.4.2 (2024-06-07)
 
-<span id="id96" />
+<span id="id100" />
 
 ### Bug fixes
 
 *   Python 3.8 support. Back to specify types with typing
 *   Fixing some import errors for local modules
 
-<span id="id97" />
+<span id="id101" />
 
 ### Other notes
 
 *   Relaxing pin of local dependencies
 
-<span id="id98" />
+<span id="id102" />
 
 ## 0.4.1 (2024-06-06)
 
-<span id="id99" />
+<span id="id103" />
 
 ### Upgrade notes
 
 *   Updating logs levels
 
-<span id="id100" />
+<span id="id104" />
 
 ### Bug fixes
 
 *   Rebuild layout in transpiled circuit
 *   Avoid barrier nodes in collection
 
-<span id="id101" />
+<span id="id105" />
 
 ### Other notes
 
 *   Refactoring the extension code
 
-<span id="id102" />
+<span id="id106" />
 
 ## 0.4.0 (2024-05-28)
 
-<span id="id103" />
+<span id="id107" />
 
 ### Upgrade notes
 
 *   Updating Clifford service URL
 *   Replace `use_ai` by `ai` param in requests
 
-<span id="id104" />
+<span id="id108" />
 
 ### New features
 
 *   Request the synthesis of a list of circuits to the service.
 *   Adding docstrings for public documentation
 
-<span id="id105" />
+<span id="id109" />
 
 ### Bug fixes
 
 *   Adjust dependencies to be less strict and support minor version updates for qiskit & patch updates for qiskit-qasm3-import
 
-<span id="id106" />
+<span id="id110" />
 
 ### Other notes
 
 *   Move type hints in documentation.
 *   Set name to logger
 
-<span id="id107" />
-
-## 0.3.0 (2024-02-29)
-
-<span id="id108" />
-
-### Upgrade notes
-
-*   Updating the plugin to use Qiskit 1.0 by default
-
-<span id="id109" />
-
-### Bug fixes
-
-*   Supporting measurements in circuits when transpiling using `ai=true` option
-
-<span id="id110" />
-
-## 0.2.1 (2024-02-22)
-
 <span id="id111" />
 
-### New features
-
-*   Add multithreading to synth requests. The requests to the service for transpile and transpile now are done in parallel.
+## 0.3.0 (2024-02-29)
 
 <span id="id112" />
 
 ### Upgrade notes
 
-*   Updated collection passes. Now the passes could work up to N of qubits or with any block size of qubits.
+*   Updating the plugin to use Qiskit 1.0 by default
 
 <span id="id113" />
 
-## 0.2.0 (2024-02-12)
+### Bug fixes
+
+*   Supporting measurements in circuits when transpiling using `ai=true` option
 
 <span id="id114" />
+
+## 0.2.1 (2024-02-22)
+
+<span id="id115" />
+
+### New features
+
+*   Add multithreading to synth requests. The requests to the service for transpile and transpile now are done in parallel.
+
+<span id="id116" />
+
+### Upgrade notes
+
+*   Updated collection passes. Now the passes could work up to N of qubits or with any block size of qubits.
+
+<span id="id117" />
+
+## 0.2.0 (2024-02-12)
+
+<span id="id118" />
 
 ### New features
 
 *   Added support for synthesis and transpilation of Clifford, Permutation and Linear Function circuits. Using new URLs for the service.
 
-<span id="id115" />
+<span id="id119" />
 
 ## 0.1.3 (2023-12-11)
 
-<span id="id116" />
+<span id="id120" />
 
 ### Bug fixes
 
@@ -673,7 +696,7 @@ in_page_toc_max_heading_level: 2
 *   Fixing hardcoded input to routing
 *   Fix bug in input and refactor
 
-<span id="id117" />
+<span id="id121" />
 
 ## 0.1.2 (2023-12-04)
 
