Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb
@@ -1248,7 +1248,7 @@
     "The CHSH game offers a way to experimentally test the theory of quantum information.\n",
     "We can perform experiments that implement the CHSH game, and test the sorts of strategies based on entanglement described above.\n",
     "This provides us with a high degree of confidence that entanglement is real — and unlike the sometimes vague or poetic ways that we come up with to explain entanglement, the CHSH game gives us a concrete and testable way to *observe* entanglement.\n",
-    "The 2022 Nobel Prize in Physics acknowledges the importance of this line of work: the prize was awarded to Alain Aspect, John Clauser (the C in CHSH) and Anton Zeilinger, for observing entanglement through Bell tests on entangled photons."
+    "The 2022 Nobel Prize in Physics acknowledges the importance of this line of work: the prize was awarded to Alain Aspect, John Clauser (the C in CHSH), and Anton Zeilinger, for observing entanglement through Bell tests on entangled photons."
    ]
   },
   {
@@ -1458,7 +1458,7 @@
    "id": "b0afbdfa",
    "metadata": {},
    "source": [
-    "Finally, we'll play the game 1,000 times and compute the fraction of them that the strategy wins."
+    "Finally, we'll play the game 1000 times and compute the fraction that the strategy wins."
    ]
   },
   {
@@ -1526,7 +1526,7 @@
    "id": "6ced89cf",
    "metadata": {},
    "source": [
-    "Again let's play the game 1,000 times to see how well it works."
+    "Again let's play the game 1000 times to see how well it works."
    ]
   },
   {
@@ -1558,12 +1558,12 @@
    "id": "a2582a40",
    "metadata": {},
    "source": [
-    "Although there's randomness involved, the statistics are very unlikely to deviate too much after 1,000 runs. The quantum strategy wins about 85% of the time while a classical strategy can't win more than about 75% of the time."
+    "Although there's randomness involved, the statistics are very unlikely to deviate too much after 1000 runs. The quantum strategy wins about 85% of the time while a classical strategy can't win more than about 75% of the time."
    ]
   }
  ],
  "metadata": {
-  "description": "Using qiskit to implement ideas from the entanglement in action lesson.",
+  "description": "Using Qiskit to implement ideas from the entanglement in action lesson.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
