Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/learning/courses/basics-of-quantum-information/multiple-systems/qiskit-implementation.ipynb
+++ b/learning/courses/basics-of-quantum-information/multiple-systems/qiskit-implementation.ipynb
@@ -5,9 +5,9 @@
    "id": "561e36c0-dca0-4493-b419-72cc5888325d",
    "metadata": {},
    "source": [
-    "## Qiskit implementations\n",
+    "# Qiskit implementation\n",
     "\n",
-    "In the previous lesson, we took a first look at Qiskit's `Statevector` and `Operator` classes, and used them to simulate operations and measurements on single qubits.\n",
+    "In the previous lesson, we took a first look at the `Statevector` and `Operator` classes in Qiskit, and used them to simulate operations and measurements on single qubits.\n",
     "In this section, we'll use these classes to explore the behavior of multiple qubits."
    ]
   },
@@ -104,7 +104,7 @@
     "\\vert {-i} \\rangle = \\frac{1}{\\sqrt{2}} \\vert 0 \\rangle - \\frac{i}{\\sqrt{2}} \\vert 0 \\rangle.\n",
     "$$\n",
     "\n",
-    "Here's an example, of the tensor product of $\\vert {+} \\rangle$ and $\\vert {-i} \\rangle.$"
+    "Here's an example of the tensor product of $\\vert {+} \\rangle$ and $\\vert {-i} \\rangle.$"
    ]
   },
   {
@@ -435,7 +435,7 @@
   }
  ],
  "metadata": {
-  "description": "Using qiskit to implement ideas from the multiple-systems lesson.",
+  "description": "Using Qiskit to implement ideas from the multiple-systems lesson.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
