Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm.ipynb
@@ -528,7 +528,7 @@
     "Each classical query reveals a single bit of information about the solution, and there are $n$ bits of information that need to be uncovered — so at least $n$ queries are needed.\n",
     "\n",
     "It is, in fact, possible to solve the Bernstein-Vazirani problem classically by querying the function on each of the $n$ strings having a single $1,$ in each possible position, and $0$ for all other bits, which reveals the bits of $s$ one at a time.\n",
-    "So, the advantage of quantum over classical algorithms for this problem is $1$ query versus $n$ queries."
+    "Therefore, the advantage of quantum over classical algorithms for this problem is $1$ query versus $n$ queries."
    ]
   },
   {
